k8s/post/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-service
spec:
  selector:
    app: post-service
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
