k8s/post/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: post-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: post-service.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: post-service
            port:
              number: 5000
